--- a/module/Application/view/layout/layout.twig
+++ b/module/Application/view/layout/layout.twig
@@ -17,7 +17,7 @@
     </head>
     <body>
         <main>
-
+            {% block content %}{% endblock content %}
         </main>
     </body>
 </html>
