--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,10 @@ li {
     margin-top: 0.25rem;
 }
 
+.task-id {
+    font-family: 'PT Mono', Menlo, 'Andale Mono', Monaco, monospace;
+}
+
 .done {
-    margin-left: 1rem;
-    color: #888;
+    color: #999;
 }
