--- a/module/Application/view/layout/layout.twig
+++ b/module/Application/view/layout/layout.twig
@@ -17,7 +17,7 @@
     </head>
     <body>
         <main>
-            <h1>zf2do</h1>
+            <h1><small>zf</small>2do</h1>
 
             {% block content %}{% endblock content %}
         </main>
