--- a/module/Application/view/application/index/index.twig
+++ b/module/Application/view/application/index/index.twig
@@ -4,6 +4,7 @@
     {{ form(form) }}
 
     <section>
+        <p>You have {{ todos|length }} items in your todo list.</p>
         {% for item in todos %}
             {% spaceless %}
                 <p {{ item.done ? 'class="done"' }}>
