--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,42 @@
+@media (min-width: 30em) {
+    .row {
+        /* safari needs webkit prefixes :( */
+        display: -webkit-flex;
+        -webkit-flex-wrap: nowrap;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .column {
+        -webkit-flex-grow: 1;
+        flex-grow: 1;
+        -webkit-flex-basis: 0;
+        flex-basis: 0;
+    }
+    .two.column {
+        -webkit-flex-grow: 2;
+        flex-grow: 2;
+    }
+    .three.column {
+        -webkit-flex-grow: 3;
+        flex-grow: 3;
+    }
+    .four.column {
+        -webkit-flex-grow: 4;
+        flex-grow: 4;
+    }
+    .five.column {
+        -webkit-flex-grow: 5;
+        flex-grow: 5;
+    }
+    .half.column {
+        -webkit-flex-grow: 0.5;
+        flex-grow: 0.5;
+    }
+    .column.right {
+        text-align: right;
+    }
+}
+
 h1 {
     border: none;
     text-align: center;
@@ -30,4 +69,25 @@ li {
 
 .done {
     color: #999;
+}
+
+.check, .delete {
+    padding: 0 0.2rem;
+    color: rgb(100, 200, 100);
+}
+
+.check:hover {
+    color: rgb(50, 150, 50);
+}
+
+.delete {
+    color: rgb(200, 100, 100);
+}
+
+.delete:hover {
+    color: rgb(150, 50, 50);
+}
+
+.center {
+    text-align: center;
 }
