--- a/module/Application/view/application/index/index.twig
+++ b/module/Application/view/application/index/index.twig
@@ -5,16 +5,21 @@
     {{ form(form) }}
 
     <section>
-        <p class="center">You have completed {{ todos|length > 0 ? (completedItems|length / todos|length * 100)|number_format(0) : 100 }}% of the items in your todo list</p>
+        {% if todos|length > 0 %}
+            <p class="center">You have completed {{ (completedItems|length / todos|length * 100)|number_format(0) }}% of the items in your todo list</p>
+        {% endif %}
+
         {% for item in todos %}
-                <p class="row{{ item.done ? ' done' }}">
-                    <span class="half column center task-id">{{ item.id }}.</span>
-                    <span class="five column">{{ item.task }}{{ item.done ? ' - Done!' }}</span>
-                    <span class="half column center">
-                        <a href="{{ basePath() }}/complete/{{ item.id }}" class="check">✔</a>
-                        <a href="{{ basePath() }}/delete/{{ item.id }}" class="delete">✖</a>
-                    </span>
-                </p>
+            <p class="row{{ item.done ? ' done' }}">
+                <span class="half column center task-id">{{ item.id }}.</span>
+                <span class="five column">{{ item.task }}{{ item.done ? ' - Done!' }}</span>
+                <span class="half column center">
+                    <a href="{{ basePath() }}/complete/{{ item.id }}" class="check">✔</a>
+                    <a href="{{ basePath() }}/delete/{{ item.id }}" class="delete">✖</a>
+                </span>
+            </p>
+        {% else %}
+            <p class="center">You don't have any items in your todo list</p>
         {% endfor %}
     </section>
 {% endspaceless %}
